# pr

./: .envrc  .gitignore  Cargo.toml  README  README.asciidoc  README.md  flake.nix
crates/common/: Cargo.toml
crates/common/src/: cipher.rs  codes.rs  lib.rs  packet.rs  rw.rs
crates/pr-client/: Cargo.toml
crates/pr-client/src/: cli.rs  cmdpr.rs  main.rs  stream.rs
crates/pr-client/src/ui/: actions.rs  display.rs  helpers.rs  input.rs  menus.rs  mod.rs
crates/pr-server/: Cargo.toml
crates/pr-server/src/: cli.rs  main.rs
docs/: SPEC.md
src/: client.rs  lib.rs  main.rs  server.rs  target.rs
