[package]
name = "common"
version = "0.1.0"
edition = "2024"
authors = ["Lokasku <lukasku@proton.me>"]
description = "Common library for the pr protocol"
repository = "https://github.com/lokasku/pr"
license = "MPL-2.0"
keywords = ["protocol", "ssh"]

[dependencies]
serde = "1.0.219"
bincode = "2.0.1"
tokio = { version = "1.45.1", features = ["full"] }
aes-gcm = "0.10.3"
aes = "0.8.4"
aead = "0.5.2"
iroh = "0.90.0"
rand = "0.8"
