[package]
name = "pr-client"
version = "0.1.0"
edition = "2024"
authors = ["Lokasku <lukasku@proton.me>"]
description = "A protocol for multiplexing simultaneous shell connections to multiple remote hosts."
repository = "https://github.com/lokasku/pr"
license = "MPL-2.0"
keywords = ["protocol", "ssh"]

[dependencies]
common = { path = "../common" }
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
aes-gcm = "0.10.3"
aes = "0.8.4"
aead = "0.5.2"
x25519-dalek = "2.0.1"
rand = "0.8"
sha2 = "0.10.9"
bincode = { version = "2.0.1", features = ["derive"] }
gumdrop = "0.8.1"
ansi_term = "0.12.1"
crossterm = "0.29.0"
iroh = "0.90.0"