[package]
name = "pr-server"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
nix = { version = "0.30.1", features = ["term", "fs", "process", "signal"] }
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
aes-gcm = "0.10.3"
aes = "0.8.4"
aead = "0.5.2"
x25519-dalek = "2.0.1"
rand = "0.8"
sha2 = "0.10.9"
bincode = { version = "2.0.1", features = ["derive"] }
gumdrop = "0.8.1"